# pfp_wg

./: .gitignore  CMakeLists.txt  Makefile  README.md  bug.txt  bug2.txt  pfwg.cpp  run.sh  tfm_index_construct.cpp  tunneled_run.sh
BWT-Tunneling/: Make.helper
BWT-Tunneling/seqana/: Makefile
BWT-Tunneling/seqana/include/: tfm_index.hpp
BWT-Tunneling/seqana/lib/: tfm_generate_aux.cpp  tfm_index_construct.cpp  tfm_index_invert_to_binary.cpp
Big-BWT/: Makefile  bigbwt  makefile  pfbwt.cpp  pfwg.cpp  tfm_generate_aux.cpp  tfm_index_construct.cpp  tfm_index_invert.cpp
Big-BWT/data/: small  small.L  small.dict  small.din  small.dout  small.ilist  small.last  small.occ  small.parse  small.src  small.tunnel  small.untunneled  yeast.fasta.last  yeast.fasta.parse_old  yeast.fasta.tunnel  yeast.raw.bwlast  yeast.raw.ilist  yeast.raw.last  yeast.raw.parse_old  yeast.raw.tunnel  yeast_double.raw.last  yeast_double.raw.occ  yeast_double.raw.parse  yeast_double.raw.parse_old  yeast_double.raw.tunnel
Big-BWT/include/: tfm_index.hpp
Big-BWT/test/: 01.din  inv.00.L  inv.01  inv.01.L  inv.01.din  inv.01.dout  inv.01.untunneled  inv.02.L  inv.02.untunneled  inv.03.L  inv.04.L  inv.04.untunneled  inv.05.L  inv.05.dout  inv.05.untunneled
bigrepair/: bigrepair  makefile  postproc.c  procdic_old.c  readme.md
bigrepair/ctph/: newscan.cpp
bigrepair/repair/: despair.c  idespair.c
data/: yeast.fasta
src/: bug.cpp  functions.cpp  newscan.cpp  newscan_functions.cpp  run.cpp  tests.cpp  tfm_explore.cpp  tfm_index.hpp  tfm_index_construct_simplified.cpp
